       command - ovsdb-server/set-active-ovsdb-server-probe-interval.
     * ovsdb-server: New OVSDB extension to allow clients to specify row UUIDs.
   - 'ovs-appctl dpctl/dump-flows' can now show offloaded=partial for
     partially offloaded flows, dp:dpdk for fully offloaded by dpdk, and
     type filter supports new filters: "dpdk" and "partially-offloaded".
     * 'dpdkvdpa' port type.
   - RSTP:
     * The rstp_statistics column in Port table will only be updated every
       stats-update-interval configured in Open_vSwtich table.
   - OVSDB:
     * When ovsdb-server is running in backup mode, the default value of probe
       interval is increased to 60 seconds for the connection to the
       replication server. This value is configurable with the unixctl
       command - ovsdb-server/set-active-ovsdb-server-probe-interval.

v2.12.0 - 03 Sep 2019
---------------------
   - DPDK:
     * New option 'other_config:dpdk-socket-limit' to limit amount of
       hugepage memory that can be used by DPDK.
     * Add support for vHost Post-copy Live Migration (experimental).
     * OVS validated with DPDK 18.11.2 which is the new minimal supported
       version.
     * DPDK 18.11.1 and lower is no longer supported.
     * New option 'tx-retries-max' to set the maximum amount of vhost tx
       retries that can be made.
   - OpenFlow:
     * All features required by OpenFlow 1.5 are now implemented, so
       ovs-vswitchd now enables OpenFlow 1.5 by default (in addition to
       OpenFlow 1.0 to 1.4).
     * Removed support for OpenFlow 1.6 (draft), which ONF abandoned.
     * New action "check_pkt_larger".
     * Support for OpenFlow 1.5 "meter" action.
   - Userspace datapath:
     * ICMPv6 ND enhancements: support for match and set ND options type
       and reserved fields.
     * Add v4/v6 fragmentation support for conntrack.
     * New ovs-appctl "dpctl/ipf-set-enabled" and "dpctl/ipf-set-disabled"